# Fanfiq

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  DOCKER_OPTIMIZATION.md  Docker  Dockerfile  Dockerfile.api  Dockerfile.backup  Dockerfile.production  Makefile  PROJECT_SUMMARY.md  RAILWAY_DEPLOYMENT.md  README.md  deploy.sh  dev.sh  docker-compose.override.yml  docker-compose.yml  env.example  env.local  package-lock.json  package.json  pyproject.toml  railway.json  railway.toml  run.sh  test_authortoday_320793.json  test_authortoday_320794.json
.github/workflows/: ci.yml  deploy-railway.yml
backend/: Dockerfile  apply_migrations.py  create_db_step_by_step.py  create_db_tables.py  test_authortoday.py
backend/api/: Docker  Dockerfile  alembic.ini  requirements.txt  schemas.py
backend/api/alembic/: env.py
backend/api/app/: __init__.py  authors.py  bookmarks.py  cache.py  history.py  (+5 more)
backend/cli/: crawl.py  export.py
backend/flows/: prefect_flows.py
backend/parsers/: __init__.py  authortoday.py  ficbook.py
backend/workers/: Docker  Dockerfile  celery_app.py
components_frontend/: README.md
components_frontend/app/: page.tsx
contracts/: openapi.yaml
docs/: parsers.md
frontend/: Docker  Dockerfile  next.config.js  next.config.js.backup  next.config.ts  package-lock.json  package.json  tailwind.config.ts
infra/: docker-compose.yml
infra/db/: init.sql
parsers/ao3/: Dockerfile  parser.py
parsers/authortoday/: Dockerfile
parsers/fanficsme/: Dockerfile  parser.py
parsers/ficbook/: Dockerfile  parser.py
parsers/litnet/: Dockerfile  parser.py
railway/: README.md  deploy.sh  docker-compose.prod.yml  production-env-example  test-deployment.sh
railway/api/: Dockerfile  requirements.txt  run.sh
railway/frontend/: Dockerfile
railway/parsers-ao3/: Dockerfile
railway/parsers-authortoday/: Dockerfile
railway/parsers-fanficsme/: Dockerfile
railway/parsers-ficbook/: Dockerfile
railway/parsers-litnet/: Dockerfile
railway/workers/: Dockerfile
scripts/: health-check.py  setup-poetry.sh
sorce/Components/: fse_prototyping_playbook_ready_snippets.md  fse_query_virtualized_results_dev_guide.md  fse_reader_stories_extras_roadmap_ready_to_paste.md  fse_storybook_complete_pack_detailed.md  fse_storybook_components_stories_shadcn_ui.md  fse_storybook_msw_error_empty_stories_ready_to_paste.md  fse_url_sync_saved_searches_bookmark_button_playwright_e_2_e_ready_to_paste.md  fse_план_использования_компонентов_shadcn_ui_детально.md
sorce/specification/: componets.txt  project.txt
test-next/: package-lock.json  package.json
(+162 files in other folders)
