[tool.poetry]
name = "fanfiq"
version = "0.1.0"
description = "Fanfiction search and reader platform"
authors = ["Fanfiq Team <team@fanfiq.dev>"]
readme = "README.md"
packages = [
    {include = "backend"},
    {include = "parsers"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.10.0"
sqlalchemy = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
redis = "^5.0.0"
alembic = "^1.13.0"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"
celery = "^5.4.0"
pytest = "^8.0.0"
prefect = "^2.14.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
python-jose = "^3.5.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
html2text = "^2024.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.parsers]
optional = true

[tool.poetry.group.parsers.dependencies]
# Parser-specific dependencies
lxml = "^5.0.0"
selenium = "^4.15.0"
webdriver-manager = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "psycopg.*",
    "redis.*",
    "celery.*",
    "prefect.*",
    "sentry_sdk.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "parsers/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov=parsers",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
